# PracticaFinalDevOps

./: .gitignore  .lintstagedrc  .prettierrc  .release-it.json  .stylelintrc  .tool-versions  .versionrc  CHANGELOG.md  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  eslint.config.mjs  pacakge.json  package.json  pyproject.toml  requirements.txt
.github/workflows/: main.yml  test.yml
docker/node/: Dockerfile
docker/prometheus/: prometheus.yml
frontend/: index.html  style.css
server/: auth.js  database.js  package-lock.json  server.js
terraform/: main.tf  outputs.tf  variables.tf
terraform/modules/base/: main.tf
terraform/modules/ecs/: main.tf
terraform/modules/monitoring/: main.tf
terraform/modules/network/: main.tf
tests/e2e/: workflow.test.js
tests/integration/: api.test.js
tests/performance/: load.test.js
tests/security/: security.test.js
tests/unit/: auth.test.js
